--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -12,17 +12,17 @@
         android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre de la aplicación"
-        android:textSize="20sp"
+        android:text="GoGuide"
+        android:textSize="35dp"
         android:textStyle="bold"
         android:layout_marginBottom="16dp" />
 
     <ImageView
         android:id="@+id/logoImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginBottom="32dp"
-        android:background="#D3D3D3" />
+        android:src="@drawable/logo" />
 
     <EditText
         android:id="@+id/usernameEditText"
