--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/recyclerViewFragment"
-        android:name="com.example.proyectoaplicacion.RecyclerViewFragment"
+        android:name="com.example.proyectoaplicacion.ui.recyclerview.RecyclerViewFragment"
         android:label="Home"
         tools:layout="@layout/fragment_recycler_view">
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.proyectoaplicacion.SettingsFragment"
+        android:name="com.example.proyectoaplicacion.ui.settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings"/>
     <fragment
         android:id="@+id/aboutFragment"
-        android:name="com.example.proyectoaplicacion.AboutFragment"
+        android:name="com.example.proyectoaplicacion.ui.about.AboutFragment"
         android:label="Acerca de"
         tools:layout="@layout/fragment_about"/>
 </navigation>
