Acceso a camara y galeria

--- a/app/src/main/res/layout/fragment_pojo_dialog.xml
+++ b/app/src/main/res/layout/fragment_pojo_dialog.xml
@@ -21,6 +21,13 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp" />
 
+    <Button
+        android:id="@+id/captureImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Capturar Imagen"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp" />
 
     <EditText
         android:id="@+id/titleEditText"
